Added the dist directory to the ignore list

--- a/web/site/_files/index.html
+++ b/web/site/_files/index.html
@@ -2,17 +2,15 @@
 <html>
 
     <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
+        <meta charset="utf-8">
+        <meta name="format-detection" content="telephone=no">
 
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi">
 
         <title>Emergency Disaster Services - Canteen Report</title>
 
-        <!-- build:css(.tmp) css/main.css -->
-        <link rel="stylesheet" href="css/main.css" />
-        <!-- endbuild -->
+        <link rel="stylesheet" href="css/main.css">
     </head>
 
     <body>
@@ -25,7 +23,7 @@
                 <div class="navbar-header">
 
                     <a class="navbar-brand" href="/">
-                        <img src="/img/logo-emergency-disaster-services.gif" alt="Brand" />
+                        <img src="/img/logo-emergency-disaster-services.gif" alt="Brand">
                     </a>
 
                 </div>
@@ -71,12 +69,12 @@
 
                                     <div class="form-group">
                                         <label for="start-date">Start Date</label>
-                                        <input id="start-date" class="form-control" name="start-date" type="date" />
+                                        <input id="start-date" class="form-control" name="start-date" type="date">
                                     </div>
 
                                     <div class="form-group">
                                         <label for="end-date">End Date</label>
-                                        <input id="end-date" class="form-control" name="end-date" type="date" />
+                                        <input id="end-date" class="form-control" name="end-date" type="date">
                                     </div>
 
                                     <div class="form-group">
@@ -97,42 +95,42 @@
 
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                <input type="checkbox" id="incident-type-fire" name="incident-type-fire" />
+                                                <input type="checkbox" id="incident-type-fire" name="incident-type-fire">
                                             </span>
                                             <label for="incident-type-fire" class="form-control">Fire/ Alarm/ Companies</label>
                                         </div>
 
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                <input type="checkbox" id="incident-type-hazmat" name="incident-type-hazmat" />
+                                                <input type="checkbox" id="incident-type-hazmat" name="incident-type-hazmat">
                                             </span>
                                             <label for="incident-type-hazmat" class="form-control">Hazmat</label>
                                         </div>
 
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                <input type="checkbox" id="incident-type-maintenance" name="incident-type-maintenance" />
+                                                <input type="checkbox" id="incident-type-maintenance" name="incident-type-maintenance">
                                             </span>
                                             <label for="incident-type-maintenance" class="form-control">Maintenance</label>
                                         </div>
 
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                <input type="checkbox" id="incident-type-flood" name="incident-type-flood" />
+                                                <input type="checkbox" id="incident-type-flood" name="incident-type-flood">
                                             </span>
                                             <label for="incident-type-flood" class="form-control">Flood</label>
                                         </div>
 
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                <input type="checkbox" id="incident-type-special-event" name="incident-type-special-event" />
+                                                <input type="checkbox" id="incident-type-special-event" name="incident-type-special-event">
                                             </span>
                                             <label for="incident-type-special-event" class="form-control">Special Event</label>
                                         </div>
 
                                         <div class="input-group">
                                             <span class="input-group-addon">
-                                                <input type="checkbox" id="incident-type-special-other" name="incident-type-special-other" />
+                                                <input type="checkbox" id="incident-type-special-other" name="incident-type-special-other">
                                             </span>
                                             <label for="incident-type-special-other" class="form-control">Other</label>
                                         </div>
@@ -140,11 +138,11 @@
 
                                     <div class="form-group">
                                         <label for="zipcode">Zip Code</label>
-                                        <input id="zipcode" class="form-control" name="zipcode" type="text" />
+                                        <input id="zipcode" class="form-control" name="zipcode" type="text">
                                     </div>
 
-                                    <input class="btn btn-default" type="submit" value="Submit" />
-                                    <input class="btn btn-link" type="reset" value="Reset" />
+                                    <input class="btn btn-default" type="submit" value="Submit">
+                                    <input class="btn btn-link" type="reset" value="Reset">
 
                                 </form>
 
@@ -225,12 +223,7 @@
             </div>
         </section>
 
-        <!-- build:js js/main.js -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
-        <script src="bower_components/mediaCheck/js/mediaCheck.js"></script>
-        <script src="js/canteenreport.main.js"></script>
-        <!-- endbuild -->
+        <script src="js/main.js"></script>
 
     </body>
 </html>
