--- a/src/static/app/report-search.html
+++ b/src/static/app/report-search.html
@@ -80,8 +80,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="unit-number">Unit #</label>
-                                        <select id="unit-number" class="form-control" name="unit-number">
+                                        <label for="incident-unit-number">Unit #</label>
+                                        <select id="incident-unit-number" class="form-control" name="incident-unit-number">
                                             <option>001</option>
                                             <option>002</option>
                                             <option>003</option>
@@ -139,8 +139,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="zipcode">Zip Code</label>
-                                        <input id="zipcode" class="form-control" name="zipcode" type="text" />
+                                        <label for="incident-zipcode">Zip Code</label>
+                                        <input id="incident-zipcode" class="form-control" name="incident-zipcode" type="text" />
                                     </div>
 
                                     <input class="btn btn-default" type="submit" value="Submit" />
