Added the login screen

--- a/src/static/app/report-search.html
+++ b/src/static/app/report-search.html
@@ -61,7 +61,7 @@
 
                     <div class="col-sm-4 col-md-3">
 
-                        <div class="sort-form">
+                        <div class="form-sort">
 
                             <h2 id="js-sort-button">Filter</h2>
 
