--- a/web/site/_files/login.html
+++ b/web/site/_files/login.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
+		<meta charset="utf-8">
+        <meta name="format-detection" content="telephone=no">
 
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi">
 
         <title>Emergency Disaster Services - Login</title>
 
-        <!-- build:css(.tmp) css/main.css -->
-        <link rel="stylesheet" href="css/main.css" />
-        <!-- endbuild -->
+        <link rel="stylesheet" href="css/main.css">
 	</head>
 
   	<body>
@@ -24,7 +22,7 @@
                 <div class="navbar-header">
 
                     <a class="navbar-brand" href="/">
-                        <img src="/img/logo-emergency-disaster-services.gif" alt="Brand" />
+                        <img src="/img/logo-emergency-disaster-services.gif" alt="Brand">
                     </a>
 
                 </div>
@@ -41,12 +39,12 @@
 
 	  			<div class="form-group">
 	  				<label for="inputEmail" class="sr-only">Email address</label>
-	  				<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+	  				<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
 	  			</div>
 
 	  			<div class="form-group">
 	  				<label for="inputPassword" class="sr-only">Password</label>
-	  				<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+	  				<input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
 	  			</div>
 
 	  			<div class="checkbox">
@@ -66,14 +64,7 @@
 
 	  	</div>
 
-	  	<!-- build:js js/main.js -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/moment/moment.js"></script>
-        <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
-        <script src="bower_components/bootstrap-sortable/Scripts/bootstrap-sortable.js"></script>
-        <script src="bower_components/mediaCheck/js/mediaCheck.js"></script>
-        <script src="js/canteenreport.main.js"></script>
-        <!-- endbuild -->
+	  	<script src="js/main.js"></script>
 
 	</body>
 </html>
