--- a/src/static/app/index.html
+++ b/src/static/app/index.html
@@ -17,7 +17,7 @@
 
     <body>
 
-        <nav class="navbar navbar-default navbar-canteen">
+        <nav class="navbar navbar-default navbar-canteen navbar-login">
 
             <div class="container-fluid">
 
@@ -30,21 +30,14 @@
 
                 </div>
 
-                <ul class="nav nav-pills nav-canteen navbar-right">
-                    <li role="presentation" class="active">
-                        <a href="#">Reports</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="#">Summary</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="#">Logout</a>
-                    </li>
-                </ul>
-
             </div>
 
         </nav>
+
+        <div class="list-group" style="max-width: 320px; margin: 0 auto;">
+            <a href="login.html" class="list-group-item">Login</a>
+            <a href="report-search.html" class="list-group-item">Report Search</a>
+        </div>
 
         <!-- build:js js/main.js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
