--- a/src/static/app/summary.html
+++ b/src/static/app/summary.html
@@ -31,10 +31,10 @@
                 </div>
 
                 <ul class="nav nav-pills nav-canteen navbar-right">
-                    <li role="presentation" class="active">
+                    <li role="presentation">
                         <a href="/report-search.html">Reports</a>
                     </li>
-                    <li role="presentation">
+                    <li role="presentation" class="active">
                         <a href="/summary.html">Summary</a>
                     </li>
                     <li role="presentation">
@@ -50,9 +50,9 @@
 
             <div class="container-fluid">
 
-                <div class="page-header page-header-canteen clearfix">
-                    <h1>Canteen Reports</h1>
-                    <p>100 Results</p>
+                <div class="page-header page-header-canteen">
+                    <h1>Summary</h1>
+                    <button class="btn btn-default btn-print glyphicon glyphicon-print">Print</button>
                 </div>
 
                 <div class="row">
@@ -61,7 +61,7 @@
 
                         <div class="form-sort">
 
-                            <h2 id="js-sort-button">Filter</h2>
+                            <h2 id="js-sort-button">Create Summary</h2>
 
                             <div id="js-sort-container" class="sort-form-container">
 
@@ -79,13 +79,14 @@
 
                                     <div class="form-group">
                                         <label for="incident-unit-number">Unit #</label>
-                                        <select id="incident-unit-number" class="form-control" name="incident-unit-number">
+                                        <select id="js-incident-unit-number" class="form-control" name="incident-unit-number">
                                             <option>001</option>
                                             <option>002</option>
                                             <option>003</option>
                                             <option>004</option>
                                             <option>005</option>
                                         </select>
+                                        <button id="js-add-unit" class="btn btn-link">Add another unit</button>
                                     </div>
 
                                     <div class="form-group">
@@ -138,11 +139,17 @@
 
                                     <div class="form-group">
                                         <label for="incident-zipcode">Zip Code</label>
-                                        <input id="incident-zipcode" class="form-control" name="incident-zipcode" type="text" />
+                                        <input id="js-incident-zipcode" class="form-control" name="incident-zipcode" type="text" />
+                                        <button id="js-add-zipcode" class="btn btn-link">Add another zipcode</button>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="summary-title">Create Summary Title</label>
+                                        <input id="summary-title" class="form-control" name="summary-title" type="text" />
                                     </div>
 
                                     <input class="btn btn-default" type="submit" value="Submit" />
-                                    <input class="btn btn-link" type="reset" value="Reset" />
+                                    <input id="js-reset-button" class="btn btn-link" type="reset" value="Reset" />
 
                                 </form>
 
@@ -153,71 +160,45 @@
 
                     <div class="report-data-container col-sm-8 col-md-9">
 
-                        <div class="table-responsive">
+                        <div class="panel panel-default">
 
-                            <table id="js-report-table" class="table table-stripped table-hover sortable report-table">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Summary Title</h3>
+                            </div>
 
-                                <thead>
-                                    <th>Date <span class="glyphicon glyphicon-chevron" aria-hidden="true"></span></th>
-                                    <th>Unit # <span class="glyphicon glyphicon-chevron" aria-hidden="true"></span></th>
-                                    <th>Type of Call <span class="glyphicon glyphicon-chevron" aria-hidden="true"></span></th>
-                                    <th>Zip Code <span class="glyphicon glyphicon-chevron" aria-hidden="true"></span></th>
-                                </thead>
-
-                                <tr>
-                                    <td data-dateformat="MM-DD-YYYY"><a href="/report.html">01/08/2015</a></td>
-                                    <td><a href="/report.html">001</a></td>
-                                    <td><a href="/report.html">Fire/ Alarm/ Companies</a></td>
-                                    <td><a href="/report.html">15222</a></td>
-                                </tr>
-                                <tr>
-                                    <td data-dateformat="MM-DD-YYYY"><a href="/report.html">01/01/2015</a></td>
-                                    <td><a href="/report.html">004</a></td>
-                                    <td><a href="/report.html">Hazmat</a></td>
-                                    <td><a href="/report.html">15218</a></td>
-                                </tr>
-                                <tr>
-                                    <td data-dateformat="MM-DD-YYYY"><a href="/report.html">01/08/2015</a></td>
-                                    <td><a href="/report.html">001</a></td>
-                                    <td><a href="/report.html">Maintenance</a></td>
-                                    <td><a href="/report.html">16503</a></td>
-                                </tr>
-                                <tr>
-                                    <td data-dateformat="MM-DD-YYYY"><a href="/report.html">01/08/2015</a></td>
-                                    <td><a href="/report.html">001</a></td>
-                                    <td><a href="/report.html">Maintenance</a></td>
-                                    <td><a href="/report.html">15222</a></td>
-                                </tr>
-                                <tr>
-                                    <td data-dateformat="MM-DD-YYYY"><a href="/report.html">01/08/2015</a></td>
-                                    <td><a href="/report.html">001</a></td>
-                                    <td><a href="/report.html">Flood</a></td>
-                                    <td><a href="/report.html">15222</a></td>
-                                </tr>
-                                <tr>
-                                    <td data-dateformat="MM-DD-YYYY"><a href="/report.html">01/08/2015</a></td>
-                                    <td><a href="/report.html">001</a></td>
-                                    <td><a href="/report.html">Special Event</a></td>
-                                    <td><a href="/report.html">15123</a></td>
-                                </tr>
-                                <tr>
-                                    <td data-dateformat="MM-DD-YYYY"><a href="/report.html">07/30/2014</a></td>
-                                    <td><a href="/report.html">001</a></td>
-                                    <td><a href="/report.html">Fire/ Alarm/ Companies</a></td>
-                                    <td><a href="/report.html">16518</a></td>
-                                </tr>
-                                <tr>
-                                    <td data-dateformat="MM-DD-YYYY"><a href="/report.html">01/01/2014</a></td>
-                                    <td><a href="/report.html">001</a></td>
-                                    <td><a href="/report.html">Other</a></td>
-                                    <td><a href="/report.html">15222</a></td>
-                                </tr>
-
-                            </table>
+                            <ul class="list-group">
+                                <li class="list-group-item"><strong>Report Status:</strong> <span class="label label-danger">Active</span></li>
+                                <li class="list-group-item"><strong>Report ID Number:</strong> 001</li>
+                                <li class="list-group-item"><strong>Unit Number:</strong> 001</li>
+                                <li class="list-group-item"><strong>Dispatch:</strong> 01/01/2015, 9:00am</li>
+                                <li class="list-group-item"><strong>In Route:</strong> 01/01/2015, 9:00am</li>
+                                <li class="list-group-item"><strong>On the Scene:</strong> 01/01/2015, 9:00am</li>
+                                <li class="list-group-item"><strong>Location of Incident:</strong> 123 Address Street, Pittsburgh, PA 15222</li>
+                                <li class="list-group-item"><strong>Type of Call:</strong> Fire/ Alarm/ Companies, Hazmat</li>
+                            </ul>
 
                         </div>
 
+                        <div class="panel panel-default">
+
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Team</h3>
+                            </div>
+
+                            <ul class="list-group">
+                                <li class="list-group-item"><strong>Salvation Army - Driver:</strong> Tom Jones</li>
+                                <li class="list-group-item"><strong>Salvation Army - Team member:</strong> Tina Jones</li>
+                                <li class="list-group-item"><strong>Red Cross Refferal</strong> Tina Jones, 412-431-0000</li>
+                            </ul>
+
+                        </div>
+
+                        <div class="page-header page-header-canteen">
+                            <button class="btn btn-default btn-print pull-right glyphicon glyphicon-print">Print</button>
+                        </div>
+
                     </div>
+
                 </div>
 
             </div>
