--- a/web/site/_files/index.html
+++ b/web/site/_files/index.html
@@ -33,8 +33,10 @@
         </nav>
 
         <div class="list-group" style="max-width: 320px; margin: 0 auto">
-            <a href="login.html" class="list-group-item">Login</a>
-            <a href="report-search.html" class="list-group-item">Report Search</a>
+            <a href="/login.html" class="list-group-item">Sign In</a>
+            <a href="/report-search.html" class="list-group-item">Search</a>
+            <a href="/summary.html" class="list-group-item">Summary</a>
+            <a href="/report.html" class="list-group-item">Report</a>
         </div>
 
         <script src="js/main.js"></script>
