--- a/src/static/app/index.html
+++ b/src/static/app/index.html
@@ -35,10 +35,10 @@
         </nav>
 
         <div class="list-group" style="max-width: 320px; margin: 0 auto;">
-            <a href="/login.html" class="list-group-item">Sign In</a>
-            <a href="/report-search.html" class="list-group-item">Search</a>
-            <a href="/summary.html" class="list-group-item">Summary</a>
-            <a href="/report.html" class="list-group-item">Report</a>
+            <a href="login.html" class="list-group-item">Sign In</a>
+            <a href="report-search.html" class="list-group-item">Search</a>
+            <a href="summary.html" class="list-group-item">Summary</a>
+            <a href="report.html" class="list-group-item">Report</a>
         </div>
 
         <!-- build:js js/main.js -->
